[gd_scene load_steps=9 format=3 uid="uid://dib2q2pgc8xrh"]

[ext_resource type="Script" uid="uid://7s1pec2sgtxf" path="res://scenes/GUI/bingo_main/character_boxes/components/gui_status_effect.gd" id="1_8w4ee"]
[ext_resource type="Shader" uid="uid://c0i8auvvjvvt0" path="res://scenes/GUI/bingo_main/character_boxes/components/gui_status_effect.gdshader" id="1_27t55"]
[ext_resource type="AudioStream" uid="uid://c8aqmfoqm7egc" path="res://resources/sounds/SFX/bingo/bingo_space_trigger.wav" id="3_27t55"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ep4j4"]
shader = ExtResource("1_27t55")
shader_parameter/has_outline = false
shader_parameter/outline_color = Color(0, 0, 0, 1)
shader_parameter/outline_size = 1.0

[sub_resource type="Animation" id="Animation_ep4j4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/has_outline")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_27t55"]
resource_name = "buff"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/has_outline")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.09, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.09),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(0.580392, 0.992157, 1, 1), Color(0, 0.596078, 0.862745, 1)]
}

[sub_resource type="Animation" id="Animation_djnhw"]
resource_name = "debuff"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/has_outline")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.09, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.09),
"transitions": PackedFloat32Array(0.5, 0.5, 1),
"update": 0,
"values": [Color(0.964706, 0.505882, 0.529412, 1), Color(0.964706, 0.505882, 0.529412, 1), Color(0.768627, 0.141176, 0.188235, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_djnhw"]
_data = {
&"RESET": SubResource("Animation_ep4j4"),
&"buff": SubResource("Animation_27t55"),
&"debuff": SubResource("Animation_djnhw")
}

[node name="GUIStatusEffect" type="TextureRect"]
material = SubResource("ShaderMaterial_ep4j4")
custom_minimum_size = Vector2(10, 10)
offset_right = 6.0
offset_bottom = 7.0
mouse_filter = 0
expand_mode = 1
stretch_mode = 5
script = ExtResource("1_8w4ee")

[node name="AttackCount" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -6.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 8
theme_type_variation = &"HUD_small"
text = "10"
vertical_alignment = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_djnhw")
}

[node name="BuffAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_27t55")
bus = &"SFX"
